See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.57.00

              pnmnorm: add -midvalue, -middle .

              pamarith: fix wrong result with -multiply.  Broken in 10.41.

11.09.28 BJH  Release 10.56.00

              Add pamexec.  Thanks Michael Pot <fmw@actrix.co.nz>.

              pbmclean: add -extended.  Idea from kugland@gmail.com.

              rasttopnm: add -index.

              pamcomp: Retain opacity information from underlying image.

              pnmtops: Add PBM fast path.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              libnetpbm and most programs that use color maps: speedup with
              new color hash function.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmquant: use File::Temp::tempfile() instead of local
              approximation if it is available.

              pnmquant: work with older Perl that doesn't have 3-argument open.
              Thanks Slaven Rezic <srezic@iconmobile.com>.

              pamscale: Issue error message instead of ignoring extraneous
              arguments.

              libnetpbm, many programs: fix bug in pm_allocarray(): returns
              NULL when can't get memory.  Calling programs thus crash on
              very large images.  Introduced in 10.51.
              
              pnmtopng: fix bug: with -alpha specifying a mask which contains
              no fully transparent area, output PNG is fully opaque.
              Introduced in 10.29.

              pnmtops: fix message: says "from top edge" where it means
              "from bottom edge."

              ppmcie: fix bug: fails with "X coordinate out of range" error.
              Introduced in 10.51.

              bmptopnm: Fail properly with BMP that indicates an illegal bits
              per pixel.

              Build: To find libpng, use the Pkgconfig database entry instead